2015-09-02  Edward Jones  <ed.jones@embecosm.com>
	Redesign of MAGEEC interfaces

	* AUTHORS: Updated authors.
	* INSTALL: Deleted.
	* Makefile.am: Likewise.
	* Makefile.in: Likewise.
	* NEWS: Likewise.
	* aclocal.m4: Likewise.
	* compile: Likewise.
	* config.guess: Likewise.
	* config.sub: Likewise.
	* configure: Likewise.
	* configure.ac: Likewise.
	* depcomp: Likewise.
	* doc/Makefile.am: Likewise.
	* doc/Makefile.in: Likewise.
	* doc/mageec.texi: Updated to reflect that cmake is now used.
	* doc/mdate-sh: Deleted.
	* gcc_plugin/Makefile.am: Likewise.
	* gcc_plugin/Makefile.in: Likewise.
	* gcc_plugin/feature-extract.cpp: Likewise.
	* gcc_plugin/gcc-callbacks.cpp: Likewise.
	* gcc_plugin/gcc-plugin.cpp: Likewise.
	* gcc_plugin/mageec-plugin.h: Likewise.
	* gcc_plugin/plugin-info.cpp: Likewise.
	* include/Makefile.am: Likewise.
	* include/Makefile.in: Likewise.
	* include/mageec/Database.h: Added file defining new MAGEEC interface.
	* include/mageec/Decision.h: Likewise.
	* include/mageec/Feature.h: Likewise.
	* include/mageec/FeatureSet.h: Likewise.
	* include/mageec/Framework.h: Likewise.
	* include/mageec/ML.h: Likewise.
	* include/mageec/Parameter.h: Likewise.
	* include/mageec/ParameterSet.h: Likewise.
	* include/mageec/Result.h: Likewise.
	* include/mageec/TrainedML.h: Likewise.
	* include/mageec/Types.h: Likewise.
	* include/mageec/Util.h: Likewise.
	* include/mageec/elfhash.h: Deleted.
	* include/mageec/mageec-db.h: Likewise.
	* include/mageec/mageec-decision.h: Likewise.
	* include/mageec/mageec-features.h: Likewise.
	* include/mageec/mageec-ml.h: Likewise.
	* include/mageec/mageec-passes.h: Likewise.
	* include/mageec/mageec-result.h: Likewise.
	* include/mageec/mageec.h: Likewise.
	* include/mageec/vectormath.h: Likewise.
	* install-sh: Likewise.
	* ltmain.sh: Likewise.
	* m4/ax_boost_base.m4: Likewise.
	* m4/ax_boost_python.m4: Likewise.
	* m4/ax_python_devel.m4: Likewise.
	* m4/libtool.m4: Likewise.
	* m4/ltoptions.m4: Likewise.