@@ -1,0 +1,46 @@
+\input texinfo
+@setfilename mageec-design.info
+@afourpaper
+@settitle MAGEEC Design
+@paragraphindent 0
+
+@copying
+This design document is for MAGEEC.
+This manual is for MAGEEC.
+
+Copyright @copyright{} 2015 Embecosm Limited.
+@quotation
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts. A copy of the license is included in the section entitled
+``GNU Free Documentation License''.
+@end quotation
+@end copying
+
+@titlepage
+@title MAGEEC Design
+@subtitle MAchine Guided Energy Efficient Compilation
+@author Edward Jones
+@page
+@vskip 0pt plus 1filll
+@insertcopying
+@end titlepage
+
+@contents
+
+@node Top
+@top Scope of this Document
+This document outlines the design for the MAGEEC @emph{MAchine Guided Energy
+Efficient Compilation} framework.
+
+@menu
+* GNU Free Documentation License::
+@end menu
+
+@node GNU Free Documentation License
+@chapter GNU Free Documentation License
+@include fdl-1.3.texi
+
+@bye
